--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello world
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>熊猫胖妮的杂货铺</title>
+    <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+    <script src="vendor/js/jquery-3.4.1.min.js"></script>
+</head>
+
+<body>
+    <img src="pics/与你同行.jpg" class="img-responsive">
+</body>
+</html>
