--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="row" style="padding-top: 20px">
         <div class="row">
-<!--            <video id="video"></video>-->
+            <video id="video"></video>
         </div>
         <div class="row">
             <span class="label label-info" id="currentPlayTime" style="font-size: medium"></span>
