--- a/simple.html
+++ b/simple.html
@@ -4,11 +4,11 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>熊猫胖妮的杂货铺</title>
         <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
-        <script src="vendor/js/jquery-3.4.1.min.js" type="text/javascript"></script>
+        <script src="vendor/js/jquery-3.4.1.min.js"></script>
     </head>
+
     <body>
-        <div class="row">
-            <span>Hi, Panda</span>
-        </div>
+        <img src="pics/与你同行.jpg" class="img-responsive">
     </body>
 </html>
+
