--- a/index.html
+++ b/index.html
@@ -1,35 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>熊猫胖妮的杂货铺</title>
-    <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
-    <script src="vendor/js/jquery-3.4.1.min.js" type="text/javascript"></script>
-</head>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>熊猫胖妮的杂货铺</title>
+        <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+        <script src="vendor/js/jquery-3.4.1.min.js"></script>
+    </head>
 
-<body>
-    <div class="row" style="padding-top: 20px">
-        <div class="row">
-            <video id="video"></video>
-        </div>
-        <div class="row">
-            <span class="label label-info" id="currentPlayTime" style="font-size: medium"></span>
-        </div>
-        <div class="row">
-            <div class="col-lg-5" id="msgs">
-                <div class="panel panel-info" style="overflow: -moz-scrollbars-vertical; overflow-y: scroll;height: 320px">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Event Msgs</h3>
-                    </div>
-                    <div class="panel-body" id="msgs_content" style="overflow-y: auto; height: 320px">
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="vendor/js/vconsole.min.js" type="text/javascript"></script>
-    <script src="utility.js" type="text/javascript"></script>
-    <script src="h5.js" type="text/javascript"></script>
-</body>
+    <body>
+        <img src="pics/与你同行.jpg" class="img-responsive">
+    </body>
 </html>
+
